frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tiketin-v2-fe
    labels:
        app: tiketin-v2-fe
spec:
    replicas: 1
    selector:
        matchLabels:
            app: tiketin-v2-fe
    template:
        metadata:
            labels:
                app: tiketin-v2-fe
        spec:
            containers:
                - name: tiketin-v2-fe
                  image: replacedbycicd
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 80
