frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: tiketin-v2-fe-service
spec:
    selector:
        app: tiketin-v2-fe
    type: ClusterIP
    ports:
        - name: http
          port: 80
          targetPort: 80
          protocol: TCP
