frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: tiketin-v2-fe-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: tiketin.dta32.my.id
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: tiketin-v2-fe-service
                            port:
                                number: 80
